# schizotronic-tui

./: CMakeLists.txt
headers/sztronics/tui/: Animations.hpp  Dot.hpp  LineUp.hpp  NCursesTUI.hpp  Rect.hpp  Scrollable_text.hpp  Sprite.hpp  Sprite_storage.hpp  TUI.hpp  Text.hpp  Text_input.hpp  UI_Area.hpp  UI_Object.hpp  Window.hpp
source/: Animations.cpp  LineUp.cpp  NCursesTUI.cpp  Rect.cpp  Scrollable_text.cpp  Sprite.cpp  Sprite_storage.cpp  TUI.cpp  Text.cpp  Text_input.cpp  UI_Object.cpp  Window.cpp
